<resources>
    <string name="app_name">Authentication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="other">or</string>
    <string name="button_login_google">botão de fazer login</string>
    <string name="signUp">Cadastrar</string>
    <string name="create_account">Crie uma conta</string>
    <string name="title_registration">Crie sua conta</string>
    <string name="logOut">Sair</string>
    <string name="name">Nome</string>
    <string name="tell">Tel.</string>
</resources>