<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegistrationActivity">

    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_registration"
        android:textSize="32sp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:padding="16dp"
        android:maxLines="1"
        android:layout_marginTop="32dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvRegistration" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <Button
        android:id="@+id/btnRegistration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signUp"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/etPassword"/>

</androidx.constraintlayout.widget.ConstraintLayout>