<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgFirebase"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/ic_firebase"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginHorizontal="16dp"
        android:padding="16dp"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/imgFirebase" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        android:maxLines="1"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/etEmail"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/login"
        android:textColor="@color/white"
        android:background="@drawable/button_primary"
        app:layout_constraintTop_toBottomOf="@id/etPassword"/>

    <View
        android:id="@+id/view1"
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvOtherLogin"
        app:layout_constraintEnd_toStartOf="@+id/tvOtherLogin"
        app:layout_constraintTop_toTopOf="@+id/tvOtherLogin" />

    <TextView
        android:id="@+id/tvOtherLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <View
        android:id="@+id/view2"
        android:layout_width="60dp"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvOtherLogin"
        app:layout_constraintStart_toEndOf="@+id/tvOtherLogin"
        app:layout_constraintTop_toTopOf="@+id/tvOtherLogin"/>

    <ImageView
        android:id="@+id/btnLoginWithGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/common_google_signin_btn_icon_light_normal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tvOtherLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/button_login_google" />

    <TextView
        android:id="@+id/tvCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/link"
        android:textSize="16sp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>